--- a/tests/Tests/IntegrationTests.csproj
+++ b/tests/Tests/IntegrationTests.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Docker.DotNet" Version="3.125.5" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
@@ -33,8 +35,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\src\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\src\Interfaces\Interfaces.csproj" />
-    <ProjectReference Include="..\..\src\Repository\Repository.csproj" />
+    <ProjectReference Include="..\..\src\Persistence\Persistence.csproj" />
+    <ProjectReference Include="..\..\src\Repository\Persistence.csproj" />
     <ProjectReference Include="..\..\src\UnitOfWork\UnitOfWork.csproj" />
   </ItemGroup>
 
