--- a/tests/Tests/IntegrationTests.csproj
+++ b/tests/Tests/IntegrationTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.5" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" />
